policy/calico.allow-all-ingress-egress.policy.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-all-ingress-egress
spec:
  selector: all()
  order: 1000
  types:
    - Egress
    - Ingress
  egress:
    - action: Allow
  ingress:
    - action: Allow
---
