policy/calico.allow-nginx-egress-to-iis.policy.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-nginx-egress
  namespace: default
spec:
  selector: run == 'nginx'
  order: 100
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        selector: run == 'iis'
---
