policy/k8s.allow-iis-egress-to-nginx.policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-iis-egress-to-nginx
  namespace: default
spec:
  podSelector:
    matchLabels:
      run: iis
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          run: nginx
    ports:
    - protocol: TCP
      port: 80
---
