policy/k8s.allow-netshoot-egress-to-iis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-netshoot-egress-to-iis
  namespace: default
spec:
  podSelector:
    matchLabels:
      run: netshoot
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          run: iis
    ports:
    - protocol: TCP
      port: 80
---
